--- a/Basic/index.html
+++ b/Basic/index.html
@@ -9,6 +9,10 @@
 </h1>
     <p id="books"></p>
 
+<h1>Basic Exercise 2</h1>
+<p id="ph">Placeholder 1</p>
+
+
 <script src="script.js"></script>
 </body>
 </html>
