--- a/Basic/index.html
+++ b/Basic/index.html
@@ -3,15 +3,25 @@
 <head>
   <meta charset="UTF-8">
   <title>Basic</title>
+  <style>
+    tr, td {
+      border: 1px solid black;
+    }
+  </style>
 </head>
 <body>
   <h1>Basic 1 | Reading Status
 </h1>
     <p id="books"></p>
 
-<h1>Basic Exercise 2</h1>
-<p id="ph">Placeholder 1</p>
+<h1>Basic 2 | Truncate</h1>
+<p id="ph"></p>
 
+<h1>Basic 3 | Table Creation</h1>
+
+<input id="rows" type="text" >
+<input id="columns" type="text">
+<input id="button1" type="button" value="Create a table">
 
 <script src="script.js"></script>
 </body>
