adding exercise 4 + styling

--- a/Basic/index.html
+++ b/Basic/index.html
@@ -4,6 +4,9 @@
   <meta charset="UTF-8">
   <title>Basic</title>
   <style>
+  	body{
+  		font-family: helvetica;
+  	}
     tr, td {
       border: 1px solid black;
     }
@@ -23,6 +26,15 @@
 <input id="columns" type="text">
 <input id="button1" type="button" value="Create a table">
 
+<h1>Basic 4 | Hotels</h1>
+<p>please have a look at the console. Output is in there!!!</p>
+<input id="h1" type="text" placeholder="hilton">
+<br>
+<input id="h2" type="text" placeholder="HolidayInn">
+<br>
+<input id="h3" type="text" placeholder="Marriot">
+<br>
+<input id="btn" type="button" value="submit">
 <script src="script.js"></script>
 </body>
 </html>
